# herakleitos

./: .gitignore  LICENSE  MODELS.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml
corpus/: build_corpus.py  loader.py
corpus/data/: contrast.jsonl  fragments.jsonl
corpus/sources/raw/: burnet1920_heraclitus_enwikisource.json  burnet1920_parmenides_enwikisource.json  dk22b_greek_elwikisource.wikitext  dk28b_greek_elwikisource.wikitext  marcus_aurelius_long_pg2680.txt  (+3 more)
datagen/: expand_seeds.py  filter.py  generate.py  seeds.py
docs/: LEAN_RUN.md  herakleitos_budget.xlsx  together_application.md
evals/: README.md  calibrate.py  decontaminate.py  report.py
evals/goldset/: build_discrimination.py  build_goldset.py  compression.jsonl  consistency.jsonl  discrimination.jsonl  gen_imitations.py  imitations.jsonl  items_compression.py  items_consistency.py  items_structural.py  items_tension.py  loader.py  structural.jsonl  structural_batch_A.json  structural_batch_B.json  structural_batch_C.json  structural_batch_D.json  tension.jsonl  tension_batch.json
evals/judge/: backends.py  config.toml  judge.py  metrics.py  rubrics.py
experiments/lean/: make_ablation_sets.py  preflight.py  run_lean.sh
harness/: serve_ui.py  ui.html
site/: index.html
tests/: test_corpus.py  test_decontaminate.py  test_goldset.py  test_judge_harness.py
training/: prepare_sft.py  run_poc2.sh
training/data/: train.jsonl  valid.jsonl
training/data_r2/: train.jsonl  valid.jsonl
training/lean/: manifest.json
(+9 files in other folders)
